<resources>
    <string name="app_name">Start up</string>
    <string name="boshlash">Boshlash</string>
    <string name="accountingiz_bormi">Accountingiz bormi?</string>
    <string name="product_icon">product_icon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="online_bozor">Online bozor</string>
    <string name="account_ochish">Account ochish</string>
    <string name="password">Password</string>
    <string name="ochish">Ochish</string>
    <string name="accountinigiz_bormi">Accountinigiz bormi?</string>
    <string name="accountga_kirish">Accountga kirish</string>
    <string name="accountingiz_yuqmi">Accountingiz yoqmi?</string>
    <string name="keyinroq">Keyinroq</string>
    <string name="home">Home</string>
    <string name="g5g5g5g5512gyhy">#g5g5g5g5512gyhy</string>
    <string name="dostavka_adresi">Dostavka adresi</string>
    <string name="magazin_haqida_azgina_malumot_bering">Magazin haqida ozgina malumot bering</string>
    <string name="keyingisi">Keyingisi</string>
    <string name="description">Description</string>
    <string name="masalan_tesla">Masalan: Tesla</string>
    <string name="produkt_muvaffaqiyatli_yuklandi">Produkt muvaffaqiyatli yuklandi</string>
    <string name="_12_000">Доставка: 12 000 сум</string>
    <string name="_20">-20%</string>
    <string name="_1_200_000_sum">1 200 000 sum</string>
    <string name="siz_uchun_maxsus">Siz uchun maxsus</string>
    <string name="basseyn_va_suzish_uchun">Basseyn va suzish uchun</string>
    <string name="yetkazib_berish_20_000_sum">Yetkazib berish: 20 000 sum</string>
    <string name="this_is_first_title_of_the_item">This is first title of the item</string>
    <string name="this_description_text_of_the_item">This description text of the item</string>
    <string name="_150_000_sum">150 000 sum</string>
    <string name="yetkazib_berish_15_000_sum">Yetkazib berish: </string>
    <string name="yetkazib_berish">Yetkazib berish: </string>
    <string name="imageviewproduct">ImageViewProduct</string>
    <string name="limited_offer">Limited offer</string>
    <string name="_5">+5</string>
    <string name="top_rated">Top rated</string>
    <string name="nima_qidiryapsiz">Nima qidiryapsiz?</string>
    <string name="zakazlar">Zakazlar</string>

    <string name="sevimli">Sevimli</string>
    <string name="korzina">Korzina</string>
    <string name="sum">sum</string>
    <string name="dollar">$</string>
    <string name="tugilgan_kun_uchun">Tugilgan kun uchun</string>
    <string name="maxsus_sovgalar">maxsus sovgalar</string>
    <string name="_135_000_sum">135.000 sum</string>
    <string name="k_star_m3_72v">K-STAR M3 Электрический мотоцикл экспорт электрический автомобиль спортивный автомобиль; Прямая поставка; Высокое Скорость Электрический мотоцикл Высокая Мощность 72V</string>
    <string name="_1">1</string>
    <string name="dshare">dshare</string>
    <string name="dtls_others">dtls_others</string>
    <string name="dtls_back">dtls_back</string>
    <string name="magazin">МАГАЗИН</string>
    <string name="korzinaga">В КОРЗИНУ</string>
    <string name="sotib_olish">КУПИТЬ</string>
    <string name="details_photo_pager_view">details_photo_pager_view</string>
    <string name="_1_1">1/1</string>
    <string name="_14_500">14.500 сум * 30min</string>
    <string name="apple_online">Apple Online</string>
    <string name="oybek">Oybek</string>
    <string name="_9989_97_774_14_15">+9989 97 774 14 15</string>
    <string name="apple">Apple</string>
    <string name="_50">50</string>
    <string name="call">Call</string>

    <string name="subscribe">Subscribe</string>
    <string name="view">View</string>
    <string name="add_new_adress">Add new adress</string>
    <string name="name_oybek_qodirov">Name: Oybek Qodirov</string>
    <string name="oybek_qodirov">Oybek Qodirov</string>
    <string name="_998_97_480_14_15">+998 97 480 14 15</string>
    <string name="zangiota_daliguzar_10_uy">Zangiota,Daliguzar 10-uy</string>
    <string name="location">Location</string>
    <string name="adress">Adress:</string>
    <string name="next">Next</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile number</string>
    <string name="masalan_akmal_payziyev">Masalan: Akmal Payziyev</string>
    <string name="_998_97_855_42_24">+998 97 855 42 24</string>
    <string name="shipping_8_500_sum">Shipping: 8.500 sum</string>
    <string name="start">Start</string>
    <string name="shipping">Shipping:</string>
    <string name="startup">Start Up</string>
    <string name="header_subtitle">Uzingizga yoqgan telefonni harid qiling</string>
    <string name="header_title">Eng Ajoyiblari</string>
    <string name="todo">TODO</string>
    <string name="obuna_bulish">Obuna bulish</string>
    <string name="message">Message</string>
    <string name="produktlar">Produktlar</string>
    <string name="user_image">User image</string>
    <string name="close_bottom_sheet">Close bottom sheet</string>
    <string name="add_comment">Add comment...</string>
    <string name="send_sticker">Send sticker</string>
    <string name="send_comment">Send comment</string>
    <string name="attach_sticker">Attach sticker</string>
    <string name="attach_document">Attach document</string>
    <string name="category_name">Category name</string>
    <string name="create_store">Magazin ochish</string>
    <string name="rasm_yuklash">Rasm yuklash</string>
    <string name="adres">\"Adress: \"</string>
    <string name="magazin_adresini_kiritish">Magazin adresini kiritish</string>
    <string name="more_products">More products</string>

    <string name="increase">Increase</string>
    <string name="sort_by">Sort by</string>
    <string name="sort_direction">Sort direction</string>
    <string name="addnewcategory">Add new category</string>
    <string name="addnewoptions">Add new options</string>
    <string name="string_catgs">Categories</string>
    <string name="no_results">No results found</string>
    <string name="provide_more_info">Please provide more information</string>
    <string name="add_card">Add card</string>
    <string name="card_empty">Your cards is empty</string>
    <string name="card_empty_subtitle">Add your bank card to purchese online</string>
    <string name="pay_cards">Payment cards</string>
    <string name="add_ad">Add ad</string>
    <string name="add_photo">Add photo</string>
    <string name="advertising">Advertising</string>
    <string name="banner_empty">Banners is empty</string>
    <string name="add_new_banner">Tap below button to add new banner</string>
    <string name="new_banner">New banner</string>
    <string name="ok">OK</string>
    <string name="orders">Orders</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
    <string name="register_subtitle">Turli xil produktlardan zavq oling</string>
    <string name="ism">Ism</string>
    <string name="email">Email</string>
    <string name="parol">Parol</string>
    <string name="login_subtitle">Salom! Hush kelibsiz</string>
    <string name="login">Login</string>
    <string name="hashtag">#hashTag</string>
    <string name="free">Bepul</string>
    <string name="search">Search</string>
    <string name="categories">Categories</string>
    <string name="see_all">See all</string>
    <string name="popular_products">Popular products</string>
    <string name="products_empty">Products empty, add your first item</string>
    <string name="cost">Cost</string>
    <string name="usd">USD</string>
    <string name="uzs">UZS</string>
    <string name="photos">Photos</string>
    <string name="add_product">Add product</string>
    <string name="delete">Delete</string>

    <string name="subtitle">Subtitle</string>
    <string name="cost_2">Cost:</string>
    <string name="quantity">Quantity</string>
    <string name="if_u_h_m_u">If you have problem with uploading, connect with us</string>
    <string name="name_value">Name/Value</string>
    <string name="sp_example">Masalan: Rangi</string>
    <string name="sp_example_v">Qora</string>
    <string name="add_specification">+ Add specification</string>
    <string name="choose_cat">Choose category</string>
    <string name="title">Title</string>
    <string name="comments">Comments</string>
    <string name="done">Done</string>
    <string name="popular">Popular</string>
    <string name="all">All</string>
    <string name="products">Products</string>
    <string name="free_shipping">Free shipping</string>
    <string name="online">online</string>
    <string name="offline">offline</string>
    <string name="now">Now</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="this_week">This week</string>
    <string name="this_month">This month</string>
    <string name="this_year">This year</string>
    <string name="long_time_ago">Long time ago</string>
    <string name="new_">New</string>

</resources>