<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurface"
        android:minHeight="56dp"
        android:layout_gravity="bottom">

        <EditText
            android:id="@+id/comment_edit_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/dimen_8"
            android:autofillHints="@null"
            android:background="@drawable/background_radius_filled"
            android:fitsSystemWindows="true"
            android:textColor="?attr/colorOnSurfaceHigh"
            android:paddingHorizontal="@dimen/dimen_12"
            android:backgroundTint="?attr/colorBackground"
            android:fontFamily="@font/roboto_regular"
            android:textColorHint="?attr/colorOnSurfaceLow"
            android:hint="@string/add_comment"
            android:inputType="textMultiLine"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/attach_document_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/attach_document_button"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/attach_document"
            android:layout_marginHorizontal="@dimen/dimen_12"
            android:src="@drawable/input_attach"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/attach_stricker_button"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorOnSurfaceMedium"  />

        <ImageView
            android:id="@+id/attach_stricker_button"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/attach_sticker"       android:padding="@dimen/grid_1"
            android:src="@drawable/input_sticker"
            android:layout_marginHorizontal="@dimen/dimen_12"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/comment_send_button"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorOnSurfaceMedium" />

        <ImageView
            android:id="@+id/comment_send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_send"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="@dimen/dimen_12"
            app:layout_constraintVertical_bias="0.526"
            app:tint="?attr/colorSecondary" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#1000"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>