<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/details_coordinator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.details.DetailsFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/details_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            app:elevation="0dp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/details_collapsing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|enterAlwaysCollapsed">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    app:layout_collapseMode="parallax"
                    android:layout_marginTop="56dp"
                    >
                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/details_photo_view_pager"
                        android:background="#F5F5F5"
                        android:layout_width="match_parent"
                        android:layout_height="350dp" />
                    <TextView
                        android:id="@+id/details_photos_count_view"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:textColor="#FFFFFF"
                        android:gravity="center"
                        android:background="@drawable/countback"
                        android:textSize="14sp"
                        android:text="@string/_1_1"
                        android:layout_gravity="bottom|end"
                        android:layout_margin="15dp"
                        android:fontFamily="@font/roboto_medium"
                        />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="@color/black"
                    app:layout_collapseMode="pin"
                    >
                    <ImageView
                        android:id="@+id/details_back_view"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="8dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/arrow_more"
                        android:rotation="90"
                        android:clickable="true"
                        app:tint="@color/white"
                        android:focusable="true"
                        android:contentDescription="@string/dtls_back" />

                    <ImageView
                        android:id="@+id/details_others_view"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="end|center_vertical"
                        android:src="@drawable/ic_ab_other"
                        android:padding="8dp"
                        android:clickable="true"
                        app:tint="@color/white"
                        android:focusable="true"
                        android:contentDescription="@string/dtls_others" />

                    <ImageView
                        android:id="@+id/details_share_view"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="50dp"
                        android:layout_gravity="end|center_vertical"
                        android:padding="8dp"
                        android:src="@drawable/msg_share"
                        android:clickable="true"
                        app:tint="@color/white"
                        android:focusable="true"
                        android:contentDescription="@string/dshare" />

                    <ImageView
                        android:id="@+id/details_navigate_to_cart"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="end|center_vertical"
                        android:layout_marginEnd="98dp"
                        android:clickable="true"
                        android:contentDescription="@string/dshare"
                        android:focusable="true"
                        android:padding="8dp"
                        android:src="@drawable/cart_icon"
                        app:tint="@color/white" />
                </FrameLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>