<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/black"
            android:elevation="5sp"
            android:layout_marginBottom="@dimen/grid_0_5"
            android:paddingTop="24dp">

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:padding="16sp"
                android:src="@drawable/quantum_ic_arrow_back_black_24"
                map:tint="#F8F8F8" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="56dp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center_vertical"
                android:paddingEnd="10sp"
                android:paddingStart="10sp"
                android:text="Location info"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="normal" />
        </FrameLayout>

        <include
            android:id="@+id/fli_location_view"
            layout="@layout/shipping_adress_item_layout" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ism"
            android:layout_marginTop="@dimen/grid_1_5"
            android:textSize="16sp"
            android:layout_marginStart="@dimen/grid_2"
            android:fontFamily="@font/open_sans_semi_bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_inputLayout" />
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconCheckable="true"
            app:endIconMode="clear_text"
            map:hintEnabled="false"
            android:layout_marginHorizontal="@dimen/grid_2"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/title_inputLayout"
            android:layout_marginTop="@dimen/grid_1"
            app:layout_constraintTop_toBottomOf="@+id/textView20">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fli_name_view"
                android:layout_width="match_parent"
                android:hint="@string/masalan_akmal_payziyev"
                android:layout_height="wrap_content"
                android:textColorHint="#666" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Telefon nomer"
            android:layout_marginTop="@dimen/grid_1_5"
            android:textSize="16sp"
            android:layout_marginStart="@dimen/grid_2"
            android:fontFamily="@font/open_sans_semi_bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_inputLayout" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconCheckable="true"
            app:endIconMode="clear_text"
            map:hintEnabled="false"
            android:layout_marginHorizontal="@dimen/grid_2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/grid_1"
            app:layout_constraintTop_toBottomOf="@+id/textView20">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fli_mobile_number_view"
                android:layout_width="match_parent"
                android:hint="+998 "
                android:inputType="number"
                android:layout_height="wrap_content"
                android:textColorHint="#666" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sizning produktingiz dunyodagi eng tez va havfsiz servis orqali yetkazib beriladi"
            android:textColor="#666"
            android:textSize="14sp"
            android:fontFamily="@font/roboto_regular"
            android:padding="@dimen/grid_2"
            />
        <Button
            android:id="@+id/fli_continue_button_view"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="@dimen/grid_2"
            android:layout_marginTop="@dimen/grid_3"
            android:text="@string/next"
            android:layout_gravity="bottom"
            android:backgroundTint="@color/md_cyan_400"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="#FFFFFF"
            android:focusable="true"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground" />
    </LinearLayout>
</layout>